3. Cloud Torrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudtorrent
spec:
  selector:
    matchLabels:
      app: cloudtorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudtorrent
    spec:
      containers:
      - name: cloudtorrent
        image: jpillora/cloud-torrent
        volumeMounts:
          - name: data
            mountPath: /downloads
        ports:
        - containerPort: 3000
      volumes:
      - name: data
        persistentVolumeClaim:
         claimName: myapp-nfs
