3. Cloud Torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudtorrent
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: cloudtorrent
